--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Idoso Seguro",
-  "name": "POC Idoso Seguro",
+  "name": "Idoso Seguro",
   "icons": [
     {
       "src": "casa-de-repouso.png",
